# interview_pyspark_3

./: .gitignore  .python-version  Dockerfile.Airflow  Dockerfile.Spark  LICENSE  Makefile  README.md  docker-compose-airflow.yaml  docker-compose-spark.yaml  pyproject.toml
.github/: CODEOWNERS
config/: airflow_variable.json
dags/: ingestion_shopify_configuration.py
dags/tools/: spark_submit_helper.py
etl/: process_shopify_configuration.py
etl/config/: spark_size.yaml
etl/tools/: workflow_helper.py
etl/workflow/: workflow_shopify_configuration.py
terraform/: README.md
terraform/dev/: env.hcl
terraform/modules/ingestion-data/: iam.tf  variables.tf
terraform/production/: env.hcl
terraform/staging/: env.hcl
terraform/staging/ingestion-data/: terragrunt.hcl
terraform/uat/: env.hcl
tests/: conftest.py
tests/data/: shopify_configuration_expected.csv  shopify_configuration_input.csv
tests/unit/tools/: test_workflow_helper.py
tests/unit/workflow/: test_workflow_shopify_configuration.py
tests/utils/: tests_helper.py
